# clickhouse-migrate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
migrator/: Cargo.toml
migrator/src/: lib.rs
migrator_cli/: Cargo.toml
migrator_cli/src/: cli.rs  main.rs
migrator_core/: Cargo.toml
migrator_core/src/: archive.rs  dbl.rs  error.rs  executor.rs  lib.rs  migration.rs  migrator.rs  reader.rs  report.rs  result.rs  table.rs  util.rs
migrator_core/src/clients/: clickhouse.rs  config.rs  driver.rs  mod.rs  traits.rs
migrator_core/src/examples/: main.rs
migrator_macros/: Cargo.toml
migrator_macros/src/: lib.rs
src/: archive.rs  cli.rs  lib.rs  main.rs  util.rs
src/clients/: clickhouse.rs  config.rs  mod.rs
