[package]
name = "migration_cli"
version = "0.1.0"
edition = "2018"
default-run = "migration_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migrator_core = { version = "0.1.0", path = "../migrator_core" }
structopt = { version = "0.3", default-features = false }
tokio = {version = "1.4.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.4"