[package]
name = "migrator_cli"
version = "0.1.0"
edition = "2018"
default-run = "migrator_cli"

[dependencies]
migrator_core = { version = "0.1.0", path = "../migrator_core" }
structopt = { version = "0.3", default-features = false }
tokio = {version = "1.4.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"