[package]
name = "migrator_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
itertools = "0.10.1"
clickhouse = "0.7"
tokio = {version = "1.4.0", features = ["full"] }
walkdir = "2"
chrono = "0.4.19"
async-trait = "0.1.51"
regex = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
confy = "0.4.0"

[build-dependencies]
tonic-build = "0.4"